--- a/.Rbuildignore
+++ b/.Rbuildignore
@@ -7,10 +7,8 @@ src-x64
 .Rhistory
 ^\.RData$
 .Rbuildignore
-SDrawNPS.rproj
+pDog.rproj
 ArchivedVersions
-TestingFolder
-Testing
 .gitignore
 .*\.gz$
 .*\.piz$
@@ -18,5 +16,3 @@ Testing
 .*\.mod$
 .*\.o$
 .*\.dll$
-^source_all.R$
-^R\jasonHelper.R$
