New getStatus.R function and its .Rd file.

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -3,8 +3,9 @@
 export(checkCellValidity)
 export(checkInCell)
 export(checkOutCell)
+export(getStatus)
 export(makeBuffer)
 export(makeInstructions)
 export(setUpReconcile)
 export(updateAssign)
-import(rgdal, rgeos, raster, maptools)
+import(rgdal, rgeos, maptools, raster)
