Several changes, including new functions checkDoubles, balanceAssign, checkDoubles.  Updates to allow for balancing of primary versus secondary in doubly cells.  A fix to ensure that assign is written out before the release of a lock.

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -4,9 +4,10 @@ export(checkCellValidity)
 export(checkDoubles)
 export(checkInCell)
 export(checkOutCell)
+export(getSkippers)
 export(getStatus)
 export(makeBuffer)
 export(makeInstructions)
 export(setUpReconcile)
 export(updateAssign)
-import(rgdal,raster,maptools,rgeos)
+import(rgdal,rgeos,maptools,raster)
