Updates to prepare for doubly digitizing.  Also repairs to the balanceAssign function to ensure square matrices.  Also updates to getStatus to report primary vs. secondary correctly.  Also repairs to checkCellValidity to use correct logic when a reconciling shapefile has at least one polygon, but no non-Recon-DIE records.

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -10,4 +10,9 @@ export(makeBuffer)
 export(makeInstructions)
 export(setUpReconcile)
 export(updateAssign)
-import(rgdal,rgeos,maptools,raster)
+export(userSummary)
+
+import(rgeos)
+import(rgdal)
+import(raster)
+import(maptools)
